# Auvideo

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dengchong/auvideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/dengchong/auvideo/: GifSizeFileter.kt  ImageProcessActivity.kt  MainActivity.kt  TestActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_test.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dengchong/auvideo/: ExampleUnitTest.kt
core/: .gitignore  build.gradle
core/src/androidTest/java/com/dengchong/core/: ExampleInstrumentedTest.kt
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt
core/src/main/cpp/camera_preview/: RecordPreviewController.cpp  RecordPreviewController.h  RecordPreviewHandler.cpp  RecordPreviewHandler.h  RecordPreviewRender.cpp  RecordPreviewRender.h  RecordingPreviewController.cpp  RecordingPreviewController.h  RecordingPreviewHandler.cpp  RecordingPreviewHandler.h  RecordingPreviewRender.cpp  RecordingPreviewRender.h
core/src/main/cpp/common/: AndroidLog.cpp  AndroidLog.h  CommonQueue.cpp  CommonQueue.h  CommonTools.h  FfmpegAlloc.cpp  FfmpegAlloc.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  matrix.h  x.h
core/src/main/cpp/common/egl_core/: EGLCore.cpp  EGLCore.h  EGLSharedContext.cpp  EGLSharedContext.h  EglCore.cpp  EglCore.h  EglTest.cpp  EglTest.h  GLTools.cpp  GLTools.h
core/src/main/cpp/common/looper/: Handler.cpp  Handler.h  Looper.cpp  Looper.h  LooperTest.cpp  LooperTest.h  Message.cpp  Message.h
core/src/main/cpp/common/opengl_media/: RenderConfig.cpp  RenderConfig.h  format.glsl  p.h
core/src/main/cpp/common/opengl_media/render/: GLSurfaceRender.cpp  GLSurfaceRender.h  GLSurfaceRenderTest.cpp  GLSurfaceRenderTest.h
core/src/main/cpp/common/opengl_media/texture/: DefaultTextureFrame.cpp  DefaultTextureFrame.h  FBOTextureFrame.cpp  FBOTextureFrame.h  GPUTextureFrame.cpp  GPUTextureFrame.h  ImageTextureFrame.cpp  ImageTextureFrame.h  TextureFrame.cpp  TextureFrame.h
core/src/main/cpp/common/opengl_media/texture_copier/: GPUTextureFrameCopier.cpp  GPUTextureFrameCopier.h  TextureFrameCopier.cpp  TextureFrameCopier.h
core/src/main/cpp/ffmpeg-example/: EncodeExamples.cpp  EncodeExamples.h  EncodingVideo.cpp  EncodingVideo.h  FFmpegAlloc.cpp  FFmpegAlloc.h  FFmpegUtils.cpp  FFmpegUtils.h  FilteringVideoExample.cpp  FilteringVideoExample.h  MuxingExample.cpp  MuxingExample.h  ScalingVideo.cpp  ScalingVideo.h
core/src/main/cpp/ffmpeg_core/: FFmpegUtil.cpp  FFmpegUtil.h
core/src/main/cpp/jni/: EglTestJni.cpp  EglTestJni.h  RecordPreviewJni.cpp  RecordPreviewJni.h  RecordingPreviewJni.cpp  RecordingPreviewJni.h
core/src/main/cpp/video_encoder/: VideoEncoderAdapter.cpp  VideoEncoderAdapter.h
core/src/main/cpp/video_encoder/soft_encoder/: EncodeExamples.cpp  EncodeExamples.h  ImageDownloadHandler.cpp  ImageDownloadHandler.h  R2YConverter.cpp  R2YConverter.h  SoftEncoderAdapter.cpp  SoftEncoderAdapter.h  VideoFrame.cpp  VideoFrame.h  VideoX264Encoder.cpp  VideoX264Encoder.h  VideoX264Muxer.cpp  VideoX264Muxer.h  encode_video.cpp  encode_video.h
core/src/main/java/com/dengchong/core/: x.java
core/src/main/java/com/dengchong/core/camera_preview/: RecordPreviewCamera.kt  RecordPreviewSchedule.java  RecordPreviewScheduler.kt  RecordPreviewSurfaceView.kt  RecordingPreviewCamera.kt  RecordingPreviewSchedule.java  RecordingPreviewScheduler.kt  RecordingPreviewSurfaceView.kt
core/src/main/java/com/dengchong/core/test/: EGLSurfaceView.kt  EGLTestMgr.java
core/src/main/java/com/dengchong/core/tools/: ActivityExt.kt  LogUtils.kt
core/src/test/java/com/dengchong/core/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
